Made corrections to timeline display alignement. Block now align with hours better.

--- a/FrontEnd/react-front-end/src/components/Bookings/Booking.css
+++ b/FrontEnd/react-front-end/src/components/Bookings/Booking.css
@@ -26,8 +26,6 @@
 		cursor: pointer;
 		border-radius: 2px;
 		padding-top: 22px;
-		top: 50%;
-		-ms-transform: translateY(-50%);
 		transform: translateY(-50%);
 	}
 
@@ -64,6 +62,8 @@
 		display: inline-block;
 	}
 
-	.container.space-between {
-		justify-content: space-between;
+	.container-t > div {
+		display: inline-block;
+		width: calc(100% / 13);
+		text-align: center;
 	}
